--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <!-- <h3 class="mbr-section-subtitle py-3 mbr-fonts-style display-2"><span style="font-style: normal;">Wedding Template</span></h3> -->
             <h1 class="mbr-section-title py-3 mbr-fonts-style display-1">Quentin &amp; Gaby</h1>
             <p class="mbr-text py-3 mbr-fonts-style display-5">We're getting married</p>
-            <div class="mbr-section-btn py-4"><a class="btn btn-md btn-white-outline display-4" href="https://mobirisethemes.com">DOWNLOAD TEMPLATE</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="https://mobirisethemes.com">VIEW DEMO</a></div>
+            <div class="mbr-section-btn py-4"><a class="btn btn-md btn-white-outline display-4" href="#aboutus">About Us <3 </a>
+                   <! ––  <a class="btn btn-md btn-white-outline display-4" href="https://mobirisethemes.com">VIEW DEMO</a></div>  -- >
         </div>
     </div>
 
@@ -80,7 +80,7 @@
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(239, 239, 239);">
     </div>
 
-    <div class="container">
+    <div class="container" id="aboutus">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 100%;">
                 <img src="assets/images/gaby.JPG" alt="Mobirise" title="" media-simple="true">
@@ -257,7 +257,7 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1">
                     Now we're going to celebrate our wedding!</h1>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-7">Free Bootstrap Wedding Template</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-7"></h3>
                 
                 
             </div>
@@ -510,7 +510,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2019 <a href="https://mobirisethemes.com" class="text-black">Free Bootstrap Templates</a> - All Rights Reserved
+                    © Copyright 2020 <a href="https://juliovasquezdev.com" class="text-black">Quentin & Gaby </a> - All Rights Reserved
                 </p>
             </div>
         </div>
