--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="container" id="aboutus">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 100%;">
-                <img src="assets/images/gaby.JPG" alt="Mobirise" title="" media-simple="true">
+                <img src="assets/images/gabby1.jpg" alt="Mobirise" title="" media-simple="true">
             </div>
 
             <div class="media-content">
@@ -112,7 +112,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 100%;">
-                <img src="assets/images/q.jpg" alt="Mobirise" title="" media-simple="true">
+                <img src="assets/images/q1.jpg" alt="Mobirise" title="" media-simple="true">
             </div>
 
             <div class="media-content">
