fixes bg image issues
fixes bg image issues

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                  <div class="timeline-date-panel col-xs-12 col-md-6  align-left">         
                     <div class="time-line-date-content">
                         <p class="mbr-timeline-date mbr-fonts-style display-5">
-                            March 3, 2019 
+                            March 3rd, 2019 
                         </p>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                  <div class="timeline-date-panel col-xs-12 col-md-6  align-left">         
                     <div class="time-line-date-content">
                         <p class="mbr-timeline-date mbr-fonts-style display-5">
-                             July 11 ,2019  
+                             July 11th ,2019  
                         </p>
                     </div>
                 </div>
