--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                  <div class="timeline-date-panel col-xs-12 col-md-6  align-left">         
                     <div class="time-line-date-content">
                         <p class="mbr-timeline-date mbr-fonts-style display-5">
-                             July 11th ,2019  
+                             July 11th   ,2019  
                         </p>
                     </div>
                 </div>
@@ -334,7 +334,7 @@
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-1">
                     Getting there &amp; Accommodation</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-7">Curabitur libero dui, elementum nec tellus a, molestie molestie massa.</h3>
+               <!--  <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-7">Curabitur libero dui, elementum nec tellus a, molestie molestie massa.</h3> -->
                 
             </div>
         </div>
